@@ -1,6 +1,9 @@
-AUX sun-jdk-1.6.0.02.env 925 RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 SHA1 02587c415e0dffefdf8900fad5884d2bd604056c SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b
+AUX sun-jdk-1.6.env 925 RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 SHA1 02587c415e0dffefdf8900fad5884d2bd604056c SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b
 AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2ef76e945eb3b4a34c4edfcf6376c58a54697b7 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581
+DIST jdk-6u10-rc-bin-b28-linux-amd64-21_jul_2008.bin 72613547 RMD160 ac45f6accb2fd69b4b3c9e0dff0684690d3167cf SHA1 3aee9997a2e6cc229d05111eb6af5e1912ec9977 SHA256 dce4c58793e9de3c377213eb442bdb9b173e04e8fff853fca761db65c642d2ec
+DIST jdk-6u10-rc-bin-b28-linux-i586-21_jul_2008.bin 79862715 RMD160 d4ac09c39b0f8d3ab6c2f669b42596582529fff7 SHA1 11b8effba855e6a4606683522d21db83b8b8b10f SHA256 f834dcc30a377645b9b24b328c06e97ca6dc0324ec75c23afb70243088a78d69
 DIST jdk-7-ea-bin-b31-linux-i586-17_jul_2008.bin 61519982 RMD160 9ec96ad72e9250551a082e7bd8b4f8785b427f7c SHA1 e2de569a23ded0457fca9b86597a9b02d94ef842 SHA256 0d348bedc992a9b011a88ffa0c00e50245c8eaa7fe26253e932691966a682323
 DIST jdk-7-ea-bin-b31-linux-x64-17_jul_2008.bin 55129422 RMD160 97ecc6346166e1f162446d29f4261b319914b7bd SHA1 a5e386d1b029b4d774ff0ded47bfd7b8c0db2aa0 SHA256 30f179aa36fd3930657d65b4740f6d72712b959398a28ed2c25e4df61e795e8a
+EBUILD sun-jdk-1.6.0.10_beta28.ebuild 4752 RMD160 b9c366ae9809e7780c7ee859c6fe49fe8b5e14f6 SHA1 26e9bdc29881dd65ccd6a01e135c148c03904295 SHA256 77ca92571c9d3d3c0d31a6b885df61b3617d88a23702cd3b51da182409e6ff55
 EBUILD sun-jdk-1.7.0.0_alpha31.ebuild 4669 RMD160 6b902523c878b4769d9b81882aafb31e8fbcbace SHA1 2150abed2b706b8b53b5d1ac3787dc2970ccd4f0 SHA256 81d195e5be5034b74f3dd3854d60ae52e9eb3fc843be51e5fbd8aaec2cf4b868
-MISC ChangeLog 6934 RMD160 acb01d8be34e880889a73e6aab72c217a7392c1b SHA1 f74a59bfe677ff65e62947bd1ef3a048f2d56145 SHA256 b1d9fe7c016788789141b5025b518b7b9b13feb4aa2f8c076d557a86f7f19170
+MISC ChangeLog 7093 RMD160 d85ed8408b8a6b2104109246faa71d31deea4598 SHA1 c3915ddd7fb91d681725aa431f1c45518f6cd840 SHA256 e5d216a6d51810903607b7ccf9bfd6d3642bf47378619e677bbe56e476e7f112
